# serverless-rust-demo

./: Cargo.toml  Makefile  README.md  otel-config.yaml  template.yaml
.github/workflows/: action.yml  ci.yml
src/: domain.rs  error.rs  lib.rs  model.rs  product.rs  utils.rs
src/entrypoints/: container.rs  lambda_apigateway.rs  mod.rs
src/entrypoints/lambda/: apigateway.rs  mod.rs
src/entrypoints/lambda/dynamodb/: mod.rs  model.rs
src/entrypoints/lambda_dynamodb/: ext.rs  mod.rs  model.rs
src/event_bus/: mod.rs  void.rs
src/event_bus/eventbridge/: ext.rs  mod.rs
src/store/: dynamodb.rs  memory.rs  mod.rs
src/store/dynamodb/: attributevaluesext.rs  ext.rs  mod.rs  productext.rs
src/utils/: mod.rs  trace.rs
tests/: aws_test.rs  generator.js
