[package]
name = "products"
version = "0.1.0"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = "0.0.22-alpha"
aws-sdk-dynamodb = "0.0.22-alpha"
aws-sdk-eventbridge = "0.0.22-alpha"
aws-smithy-client = { version = "0.27.0-alpha", features = ["test-util"] }
aws-smithy-http = "0.27.0-alpha"
aws-types = "0.0.22-alpha"
futures = { version = "0.3", features = ["std"] }
lambda_runtime = "0.4"
lambda_http = "0.4"
serde = "1"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
float-cmp = "0.9"
http = "0.2"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }